# stmo-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.claude/skills/release/: SKILL.md
.claude/skills/stmo/: SKILL.md
.claude/skills/update-stmo-skill/: SKILL.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
scripts/: sync-firefox-skill.sh
src/: api.rs  config.rs  lib.rs  main.rs  models.rs
src/commands/: archive.rs  dashboards.rs  datasources.rs  deploy.rs  discover.rs  dynamic_dates.rs  execute.rs  fetch.rs  init.rs  mod.rs  schedule.rs  snippets.rs  update.rs
templates/init/: CLAUDE.md  pre-commit-config.yaml
tests/: api_integration.rs  dashboard_commands.rs  deploy_commands.rs  execute_commands.rs  keychain.rs  proxy_tunnel.rs  snippet_commands.rs
tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: changelog.rs  main.rs
