[package]
name = "stmo-cli"
version = "0.5.4"
edition = "2024"
description = "CLI for version controlling Redash queries and dashboards"
license = "MPL-2.0"
repository = "https://github.com/JohanLorenzo/stmo-cli"
readme = "README.md"
keywords = ["redash", "cli", "sql", "version-control"]
categories = ["command-line-utilities"]
exclude = [
    "/CLAUDE.md",
    "/.pre-commit-config.yaml",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dialoguer = "0.11"
moz-cli-version-check = "0.2.4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"
