[workspace]
members = ["xtask"]

[package]
name = "stmo-cli"
version = "0.9.0"
edition = "2024"
description = "Turn Claude Code into a data analyst on sql.telemetry.mozilla.org"
license = "MPL-2.0"
repository = "https://github.com/mozilla/stmo-cli"
readme = "README.md"
keywords = ["redash", "cli", "sql", "version-control"]
categories = ["command-line-utilities"]
exclude = [
    "/CLAUDE.md",
    "/.pre-commit-config.yaml",
    "/.claude",
    "/xtask",
    "/.cargo",
    "/scripts",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "charset", "http2", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dialoguer = "0.12"
moz-cli-version-check = "0.2.4"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
pretty_assertions = "1"
